poc/tests/errors/test_FplInvalidInheritance_tpl.fpl
TestNamespace
{
    theory
    {
        class Zero: tpl
        {
        }
    }
}

##############################

FplInvalidInheritance:5:23: Inheritance from tpl not possible (not a defined class but a generic type)